--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,7 @@
 	</dependencies>
 
 	<build>
+        <finalName>readinglist</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
